# content-publishing-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: fact-check.md  publish-trip.md  review.md  revise-draft.md
.claude/rules/: coding-standards.md  testing.md
.github/workflows/: ci.yml
prompts/: voice_document.md
src/: browser_fetcher.py  database.py  inbox_scanner.py  keyword_researcher.py  output_writer.py  telegram_sender.py
tests/: test_browser_fetcher.py  test_database.py  test_inbox_scanner.py  test_keyword_researcher.py  test_output_writer.py  test_telegram_sender.py
