[project]
name = "content-publishing-agent"
version = "0.1.0"
description = "Content publishing pipeline agent for Fanatic Explorer travel blog"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",               # .env loading
    "requests>=2.31",                    # Keysearch API + Telegram Bot API
    "playwright>=1.40",                  # Headless Chrome fallback for blocked sites
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # formatter handles line length

[tool.ruff.lint.isort]
known-first-party = ["src"]
